Add user action: index and create
