# design/resources.go
@@ -24,12 +24,29 @@ var _ = Resource("user", func() {
 	BasePath("/users")
 	DefaultMedia(User)
 
+	Action("index", func() {
+		Description("List users")
+		Routing(GET("/"))
+		Response(OK, func() {
+			Media(CollectionOf(User, func() {
+				View("default")
+			}))
+		})
+		Response(NotFound)
+	})
 	Action("show", func() {
 		Description("Get user by id")
 		Routing(GET("/:userID"))
 		Params(func() {
 			Param("userID", Integer, "User ID")
 		})
+		Response(OK)
+		Response(NotFound)
+	})
+	Action("create", func() {
+		Description("Create user")
+		Routing(POST("/"))
+		Payload(UserPayload)
 		Response(OK)
 		Response(NotFound)
 	})
